Create register and login form

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             </div>
           </div>
           <div class="group__brand">
-            <img class="brand__icon" src="./icon/icon.png" />
-            <img class="brand__letter" src="./icon/letter.png" />
+            <img class="brand__icon" src="./images/brand/icon.png" />
+            <img class="brand__letter" src="./images/brand/letter.png" />
           </div>
         </div>
         <div class="header__search">
@@ -68,7 +68,7 @@
               </svg>
             </button>
           </div>
-          <button class="connection-btn" onclick="location.href=''">
+          <button class="connection-btn" onclick="location.href='./component/registerForm.html'">
             <div class="connection-btn__icon">
               <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
@@ -215,7 +215,7 @@
               </header>
               <div class="sidebar__section__body">
                 <div class="sidebar__actions">
-                  <button class="connection-btn" onclick="location.href=''">
+                  <button class="connection-btn" onclick="location.href='./component/loginForm.html'">
                     <div class="connection-btn__icon">
                       <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
